cmake_minimum_required(VERSION 3.5)
project(ds_node)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
#find_package(geographic_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
# interface
find_package(rosidl_default_generators REQUIRED)

# include header directories
include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  # ${CMAKE_CURRENT_SOURCE_DIR}/include
)
# set msgs(interfaces)
set(msg_files
  "msg/BinaryData.msg"
  "msg/CorrectedIMU.msg"
  "msg/Kalman.msg"
  "msg/Dmi.msg"
  "msg/LeapSeconds.msg"
  "msg/EulerAttitude.msg"
  "msg/NmeaGGA.msg"
  "msg/GnssHmr.msg"
  "msg/TimeSync.msg"
  "msg/Geoid.msg"
  "msg/RawIMU.msg"
  "msg/CompactNav.msg"
  "msg/SolutionStatus.msg"
)

set(dependencies
  "rclcpp" 
  "std_msgs"
  "nav_msgs"
  "sensor_msgs"
  "geometry_msgs"
#  "geographic_msgs"
)

# generate msgs
rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  DEPENDENCIES std_msgs
)
ament_export_dependencies(rosidl_default_runtime)
# ament_export_include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(${PROJECT_NAME}_talker 
  src/${PROJECT_NAME}_talker_main.cpp
  src/ds_nmea.cpp
  src/ds_convert.cpp
  src/ds_node_talker.cpp
)
add_executable(ds_node_listener
  src/ds_node_listener.cpp
)
add_executable(ds_node_rtcm_forwarder
  src/ds_node_rtcm_forwarder.cpp
)
add_executable(ds_binary_tcp 
  src/ds_binary_tcp.cpp
)
add_executable(ds_binary_udp 
  src/ds_binary_udp.cpp
)
ament_target_dependencies(${PROJECT_NAME}_talker 
  ${dependencies}
)
ament_target_dependencies(ds_node_listener
  ${dependencies}
)
ament_target_dependencies(ds_node_rtcm_forwarder
  ${dependencies}
)
ament_target_dependencies(ds_binary_tcp 
  ${dependencies}
)
ament_target_dependencies(ds_binary_udp 
  ${dependencies}
)
#### installing
# Install executables
install(TARGETS
  ${PROJECT_NAME}_talker
  ds_node_listener
  ds_node_rtcm_forwarder
  ds_binary_tcp
  ds_binary_udp
  DESTINATION lib/${PROJECT_NAME}
)
rosidl_target_interfaces(${PROJECT_NAME}_talker
  ${PROJECT_NAME} "rosidl_typesupport_cpp")
rosidl_target_interfaces(ds_node_listener
  ${PROJECT_NAME} "rosidl_typesupport_cpp")
rosidl_target_interfaces(ds_node_rtcm_forwarder
  ${PROJECT_NAME} "rosidl_typesupport_cpp")
rosidl_target_interfaces(ds_binary_udp
  ${PROJECT_NAME} "rosidl_typesupport_cpp")
rosidl_target_interfaces(ds_binary_tcp
  ${PROJECT_NAME} "rosidl_typesupport_cpp")

# Install launch files.
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)
# Install parameters
install(DIRECTORY
  param
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
