<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ds_node</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="weiofjian@gmail.com">wei</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- generic dependencies -->
  <depend>rclcpp</depend>
  <!-- <depend>std_msgs</depend> -->
  <depend>geometry_msgs</depend>
  <!-- <depend>geographic_msgs</depend> -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- custom interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
